# CG

GAMES101/Homework0/: main.cpp
GAMES101/Homework1/: main.cpp  rasterizer.cpp  rasterizer.hpp
GAMES101/Homework2/: main.cpp  rasterizer.cpp
GAMES101/Homework3/: Texture.hpp  global.hpp  main.cpp  rasterizer.cpp
GAMES101/Homework4/: main.cpp
GAMES101/Homework5/: Object.hpp  Renderer.cpp  Triangle.hpp
GAMES101/Homework6/: BVH.cpp  Bounds3.hpp  Intersection.hpp  Renderer.cpp  Triangle.hpp
GAMES101/Homework7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Triangle.hpp  global.hpp  main.cpp
LearnOpenGL/: .gitignore  LearnOpenGL.sln
LearnOpenGL/HelloTriangle/: HelloTriangle.vcxproj  HelloTriangle.vcxproj.filters
LearnOpenGL/HelloWindow/: HelloWindow.vcxproj  HelloWindow.vcxproj.filters
LearnOpenGL/LearnOpenGL/: LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters
LearnOpenGL/Shaders/: Shaders.vcxproj  Shaders.vcxproj.filters
LearnOpenGL/Textures/: Textures.vcxproj  Textures.vcxproj.filters
LearnOpenGL/Transformations/: Transformations.vcxproj  Transformations.vcxproj.filters
tinyrenderer/: CMakeLists.txt  main.cpp
tinyrenderer/Lesson1/: geometry.h  main.cpp  model.h
tinyrenderer/Lesson2/: geometry.h  main.cpp
tinyrenderer/Lesson3/: geometry.h  main.cpp  model.cpp
tinyrenderer/Lesson4/: CMakeLists.txt  geometry.h  main.cpp  model.h
tinyrenderer/Lesson5/: CMakeLists.txt  camera.cpp  geometry.cpp  (+2 more)
tinyrenderer/Lesson6/: CMakeLists.txt  geometry.h  main.cpp  model.h  tgaimage.h  tr_gl.cpp  tr_gl.h
(+25 files in other folders)
